Fixed transition on iOS devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ button:hover {
 
 @media screen and (min-width: 768px) {
     .spinner-thick {
-        transition: transform 0.2s ease;
+        transition: all transform 0.2s ease;
     }
 
     .number {
